# examples

./: README.org  help.sh
bash/: arguments_getopt.sh  arguments_getopts.sh  color.sh  colors.sh  dialog.sh  errors.sh  heredoc.sh  log_color.sh  netcat_shell.sh  signal.sh  source_exec.sh  tests.sh  time.sh  timeout.sh  user_choice.sh
c/argp/: main.c  util.c  util.h
c/hello_world/: Makefile  main.c
c/perf/: perf.c  perf.h
cron/: cron_tmux.sh
direnv/: .envrc  .envrc.private  lib.sh
docker/archlinux/: Dockerfile  Makefile
docker/ubuntu/: Dockerfile  Makefile
drawio/: convert.sh
emacs/dir-locals/: .dir-locals.el  README.md
emacs/pull-request/: Makefile  README.md  init.el  mwe.org
gnuradio/: noise_gen.grc  noise_gen.py  siggen_add.grc  siggen_add.py
latex/org_beamer_talk/: beamer.org
latex/org_book_report/: report.setup
lisp/: io.lisp  list.lisp  math.lisp
python/: aes.py  aes_ecb.py  assert.py  binary.py  cli_click.py  concurrency_asyncio.py  debug.py  file_csv.py  http_requests.py  large_numbers.py  log.py  multiprocess_executor.py  multiprocess_pool.py  multiprocess_process.py  numpy_dsp.py  numpy_siggen_chirp.py  numpy_siggen_modulate.py  pickle_basic.py  scipy_align.py  scipy_filters.py  soapysdr.py  thread.py  time_perf_counter.py
python/setuptools_toml/: Makefile  pyproject.toml
python/setuptools_toml/mypkg/: __init__.py  main.py  mylib.py  mymod.py
python/setuptools_toml/setuptools_toml/: __init__.py  lib.py  main.py
systemd/: myservice_fork.service  myservice_oneshot.service
talks/: Makefile  beamer.org
vagrant/: Vagrantfile
(+63 files in other folders)
