# Build system configuration.
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Project metadata configuration.
[project]
name = "setuptools_toml"
version = "0.0.1"
# dependencies = [
#     "click",
#     "colorlog",
#     "numpy",
#     "matplotlib"
# ]

# Scripts configuration.
[project.scripts]
# Will create a "setuptools_toml-cli" Bash script targeting the
# "setuptools_toml" package, "main" module, "main()" function.
setuptools_toml-cli = "setuptools_toml.main:main"

# Package layout.
# NOTE: Disabling the following options will enable the automatic package
# discovery of Setuptools. In this project, we use the "src" layout.
# See: https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
# [options]
# packages = mypkg